# researcharr

./: .bandit.yaml  .coverage  .dockerignore  .env.example  .example_env  .flake8  .gitignore  .isort.cfg  .logging-lint-rules.md  .mergify.yml  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  .sourcery.yaml  .yamllint  404.html  AUTOMATION_STATUS.md  BACKUP_IMPLEMENTATION_SUMMARY.md  BETA_ROADMAP.md  CHANGELOG.md  CONTRIBUTING.md  COVERAGE_GUTTERS_SETUP_SUMMARY.md  Changelog.md  DATABASE_HEALTH_MONITORING_SUMMARY.md  Dockerfile  Dockerfile.alpine  Dockerfile.distroless  IMPLEMENTATION_SUMMARY.md  ISSUE-107-pipeline-framework.md  ISSUE_109_IMPLEMENTATION_SUMMARY.md  JOB_QUEUE_INTEGRATION_SUMMARY.md  JOB_QUEUE_REFERENCE.md  LICENSE  Makefile  PAT_SETUP_GUIDE.md  PHASE_2_5_IMPLEMENTATION_SUMMARY.md  PR127_FIX_README.md  PROJECTS_TOKEN_MIGRATION.md  PROJECT_STRUCTURE_SUMMARY.md  PYTHON_COMPATIBILITY.md  (+71 more)
.githooks/: pre-push
.github/: FUNDING.yml  PRIORITY_SETUP_GUIDE.md  PROJECT_BOARD_SETUP.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/agents/: Pytest.agent.md
.github/scripts/: debug_imports.py  ghcr_cleanup.py
.github/workflows/: add-all-issues-to-project.yml  alpine-ci.yml  auto-merge-allowed-authors.yml  build-wheels.yml  ci.yml  (+34 more)
.tmp_coverage/: coverage.xml
API/: index.html
CI-and-Development/: index.html
CONFIGURATION/: index.html
Changelog/: index.html
Contributing/: index.html
Coverage-Gutters-Example-Comparison/: index.html
Coverage-Gutters-Quick-Reference/: index.html
Coverage-Gutters-Quick-Start/: index.html
Coverage-Gutters-Setup/: index.html
DEV/: index.html
Deployment-and-Resources/: index.html
Environment-Variables/: index.html
FAQ/: index.html
Getting-Started/: index.html
Health-and-Metrics/: index.html
Integrations/: index.html
Logs/: index.html
Plugins/: index.html
Recent-Changes/: index.html
Renovate-Configuration/: index.html
Roadmap/: index.html
Status-and-Warnings/: index.html
Versioning/: index.html
WHEELHOUSE/: index.html
_includes/: navbar.html
alembic/: env.py
backups-scratch/: README.md  researcharr.py
config/: config.yml  task_history.jsonl  webui_user.example.yml  webui_user.yml  webui_user.yml.bak  webui_user.yml.bak2
docs/: API.md  Backup-and-Recovery.md  CI-and-Development.md  CLI-Usage.md  CONFIGURATION.md  Contributing.md  Coverage-CI-Local-Differences.md  Coverage-Gutters-Example-Comparison.md  Coverage-Gutters-Quick-Reference.md  Coverage-Gutters-Quick-Start.md  Coverage-Gutters-Setup.md  DEV.md  Deployment-and-Resources.md  Environment-Variables.md  Getting-Started.md  Health-and-Metrics.md  JOB_QUEUE_QUICKSTART.md  PR_INSTRUCTIONS.txt  Packaging-and-Distribution.md  Renovate-Configuration.md  SERVICES_ARCHITECTURE.md  Status-and-Warnings.md  Versioning.md  WHEELHOUSE.md  _config.yml  index.md  tooling-experiments.md
examples/: job_eventbus_integration.py  job_queue_integration.py
plugins/: __init__.py  base.py  example_apprise.py  example_nzbget.py  example_sonarr.py  registry.py
release-drafter-action/: README.md
researcharr/: __init__.py  __init__.pyi  _backups_impl.py  _factory_proxy.py  _package_helpers.py  _types.pyi  api.pyi  async_pipeline.py  backup_restore.py  backups.py  backups.pyi  backups_impl.py  cache.py  cli.py  compat.py  compat.py.bak  db.py  factory.py  factory.pyi  junit.xml  researcharr.py  researcharr.pyi  run.py  run.pyi  validators.py  webui.py  webui.pyi
researcharr.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: README.md  add-issues-to-project.py  auto_fix_yaml.sh  bootstrap-config.sh  build-debug-image.sh  build-wheelhouse.sh  check-filename-sanity.sh  check_filename_sanity.py  ci-local.sh  ci-multi-version.sh  cleanup-renovate-branches.sh  create-alpha-development-issues.py  create-beta-issues.py  create-core-engine-subissues.py  create-core-stability-subissues.py  debug-collect.sh  dev-up.sh  format-yaml.sh  install-prepush-hook.sh  multi-version-test.sh  pairwise-bisect.sh  pytest-timeout.sh  regenerate-ordering-nodeids.sh  replay_prefix_bisect.py  researcharr.py  run-detect-secrets.sh  run-local-ci.sh  run-mypy-precommit.sh  run-pyright-precommit.sh  run-pytest-precommit.sh  run-pytest-prepush.sh  run-repeat-bisect.sh  run-safety-precommit.sh  run-shellcheck.sh  run-tests.sh  run.py  run_precommit.sh  run_pytest_ci_cov.sh  run_tests_individual.py  test-ci-mode.sh  (+2 more)
site/: Deployment-and-Resources.md  FAQ.md  Getting-Started.md  Health-and-Metrics.md  index.html
static/: app.css  app.js  colors.css  logo.xcf  style.css
templates/: _plugin_card.html  backups.html  base.html  footer.html  general.html  header.html  login.html  logs.html  plugins.html  reset_password.html  scheduling.html  settings_general.html  settings_plugins.html  settings_radarr.html  settings_sonarr.html  setup.html  setup_success.html  sidebar.html  status.html  tasks.html  updates.html  user.html
tests/: __init__.py  _debug_import.py  conftest.py  conftest_isolation.py  test_api.py  test_api_blueprint.py  test_api_consolidated.py  test_api_docs.py  test_api_endpoints.py  test_api_logs.py  test_api_tasks.py  test_app.py  test_app_health_metrics.py  test_application_coverage.py  test_apprise_plugin.py  test_async_pipeline_backpressure.py  test_async_pipeline_context_run.py  test_async_pipeline_lifecycle.py  test_async_pipeline_progress.py  test_async_pipeline_prometheus.py  test_async_pipeline_template_yaml.py.new  test_background_tasks.py  test_backup_restore.py  test_backups.py  test_backups_comprehensive.py  test_backups_coverage_boost.py  test_backups_edgecase_coverage.py  test_backups_endpoints.py  test_backups_endpoints_more.py  test_backups_impl.py  test_backups_integration.py  test_backups_module.py  test_backups_more.py  test_backups_shim.py  test_backups_unit.py  test_connections.py  test_core_api_new.py  test_core_api_smoke.py  test_core_application.py  test_core_config.py  (+88 more)
tooling-experiments/: index.html
typings/: github_actions.pyi
unit_tests/: test_backups_smoke.py
wheelhouse/: researcharr-0.0.0-py3-none-any.whl
(+585 files in other folders)
